testsuite/tests/th/T15362.stderr

T15362.hs:7:2: error: [GHC-88221]
    • Mismatched type name in type family instance.
        Expected: +
          Actual: Maybe
    • In the type family declaration for ‘+’
